--- a/src/componets/nav/nav.css
+++ b/src/componets/nav/nav.css
@@ -7,25 +7,26 @@ nav {
     justify-content: space-between;
     padding: 0 10px;
     align-items: center;
-    background: repeating-linear-gradient(35deg,blue 100px, indigo 150px);
+    background: repeating-linear-gradient(35deg,  gainsboro 80px, whitesmoke 150px);
     color: white;
     border-bottom: 5px solid #000;
-    background-image: url('/public/download.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 30vh;
+    /* background-image: url('/public/download.jpg'); */
+    /* background-size: cover;
+    background-repeat: no-repeat; */
+    height: 20vh;
 }
 
 nav h1 {
-    background: teal;   
+    background: green;   
     border: 2px solid black;
     padding: 10px;
     border-radius: 8px;
+    color: ghostwhite;
 }
 
 nav button {
     background: transparent;
-    color: white;
+    color: black;
     margin: 0 20px;
     font-size: 1.5rem;
     border: none;
