--- a/src/componets/about/about.css
+++ b/src/componets/about/about.css
@@ -1,14 +1,17 @@
 body {
-    background: rgb(72, 123, 123);
+    background-color: gainsboro;
+   
 }
 
 #about {
     width: 90%;
-    margin: 10px auto;
+    margin: 20px auto;
+    margin-top: 3%;
+    margin-bottom: 100px;
 }
 
 #about img {
-    width: 250px;
+    width: 260px;
     border: 5px solid #000;
     border-radius: 8px;
     float: left;
@@ -17,4 +20,10 @@ body {
 
 p {
     font-size: 1.2rem;
+}
+
+#skills {
+    width: 90%;
+    margin: 20px auto;
+    margin-top: 3%;
 }
