--- a/src/componets/work/work.css
+++ b/src/componets/work/work.css
@@ -1,6 +1,7 @@
 #work {
-    margin: 10px auto;
-    width: 90%;
+    margin: 19px auto;
+    margin-top: 3%;
+    width: 60%;
     text-align: center;
 }
 
@@ -8,16 +9,19 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+   margin-bottom: 90px;
 }
 
 #appsDiv .card:first-child {
     width: 100%;
-    height: 40vh;
+    height: 50vh;
+    margin-bottom: 60px;
 }
 #appsDiv .card {
     width: 48%;
     position: relative;
-    margin: 10px 0;
+    margin: 20px 0px;
+    margin-top: 40px;
 }
 
 .card img {
@@ -25,6 +29,12 @@
     height: 100%;
     border: 4px solid #000;
     border-radius: 8px;
+    box-shadow: 5px 0 10px #000;
+}
+
+.card img:hover {
+    opacity: .8;
+    box-shadow: 8px 0 10px gold;
 }
 
 .card div {
