--- a/src/componets/nav/nav.css
+++ b/src/componets/nav/nav.css
@@ -31,18 +31,18 @@ nav button {
     background: transparent;
     color: black;
     margin: 0 20px;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     border: none;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     /* border-bottom: 5px solid white; */
 }
 
 nav button:hover {
     color: white;
-    border-bottom: 5px solid white;
+    padding: 8px;
+    border-bottom: 5px solid whitesmoke;
 }
 nav h1:hover {
-    
-    color: gray;
+    color: whitesmoke;
     /* border-bottom: 5px solid white; */
 }
