--- a/src/componets/footer/footer.css
+++ b/src/componets/footer/footer.css
@@ -3,6 +3,7 @@
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    /* border-top: 2px solid #282828; */
 }
 #footer h2 {
     font-size: 20px;
