--- a/src/componets/work/work.css
+++ b/src/componets/work/work.css
@@ -32,12 +32,12 @@ body {
     height: 100%;
     border: 4px solid #000;
     border-radius: 8px;
-    box-shadow: 5px 0 10px #000;
+    box-shadow: 9px -1px 20px 2px #000;
 }
 
 .card img:hover {
     opacity: .8;
-    box-shadow: 8px 0 10px gold;
+    box-shadow: 9px -1px 20px 2px rgba(20, 172, 0, 0.432);
 }
 
 .card div {
@@ -51,3 +51,8 @@ body {
     opacity: .65;
 }
 
+h7 {
+    font-size: 0.8rem;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
