--- a/src/componets/nav/nav.css
+++ b/src/componets/nav/nav.css
@@ -45,6 +45,7 @@ nav button {
     font-size: 1.4rem;
     border: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    cursor: pointer;
     /* border-bottom: 5px solid white; */
 }
 
