and he scoressssss

--- a/src/componets/work/work.css
+++ b/src/componets/work/work.css
@@ -27,7 +27,6 @@ body {
     position: relative;
     margin: 20px 0px;
     margin-top: 40px;
-    filter: blur(3px);
 }
 
 .card > img {
@@ -36,10 +35,12 @@ body {
     border: 4px solid #000;
     border-radius: 8px;
     box-shadow: 9px -1px 20px 2px #000;
+    filter: blur(3px);
+    transition: filter 0.4s ease-in-out;
 }
 
 .card img:hover {
-    opacity: .8;
+    opacity: 10;
     box-shadow: 9px -1px 20px 2px rgba(20, 172, 0, 0.432);
     filter: blur(0px);
 }
