--- a/src/componets/about/about.css
+++ b/src/componets/about/about.css
@@ -23,11 +23,13 @@ p {
 }
 
 #skills img {
-    width: 10%;
+    width: 15%;
     margin-top: 3%;
     margin-bottom: 1%;
 }
 #bottom {
     margin-top: 25%;
+    margin-left: 20%;
     margin-bottom: 10%;
+    margin-right: 20%;
 }
