--- a/src/componets/about/about.css
+++ b/src/componets/about/about.css
@@ -1,5 +1,5 @@
 body {
-    background-color:#303030 ;
+    background-color: #303030;
     color: #C8C8C8;
 }
 
@@ -22,14 +22,23 @@ p {
     font-size: 1.2rem;
 }
 
-#skills img {
-    width: 15%;
-    margin-top: 3%;
-    margin-bottom: 1%;
-}
-#bottom {
-    margin-top: 25%;
+#skills {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-top: 5%;
     margin-left: 20%;
-    margin-bottom: 10%;
+    margin-right: 20%;
+}
+
+#skills img {
+    width: 14%;
+    margin: 3% 1.5%;
+}
+
+#bottom {
+    margin-top: 5%;
+    margin-left: 20%;
+    margin-bottom: 6%;
     margin-right: 20%;
 }
