--- a/src/componets/about/about.css
+++ b/src/componets/about/about.css
@@ -42,6 +42,10 @@ p {
     margin-bottom: 6%;
     margin-right: 20%;
 }
+#bottom img {
+    width: 40%;
+    margin: 0% 1.5%;
+}
 
 #me {
     margin-top: 5%;
