--- a/src/componets/about/about.css
+++ b/src/componets/about/about.css
@@ -37,14 +37,20 @@ p {
 }
 
 #bottom {
-    margin-top: 5%;
-    margin-left: 20%;
-    margin-bottom: 6%;
-    margin-right: 20%;
+  margin-top: 5%;
+  margin-bottom: 6%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+#bottom h1 {
+  margin-bottom: 20px;
+}
+
 #bottom img {
-    width: 20%;
-    margin: 0% 1.5%;
+  max-width: 100%;
+  height: auto;
 }
 
 #me {
