Lets Goooogit add .!

--- a/src/componets/about/about.css
+++ b/src/componets/about/about.css
@@ -37,22 +37,26 @@ p {
 }
 
 #bottom {
-  margin-top: 5%;
-  margin-bottom: 6%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#bottom h1 {
-  margin-bottom: 20px;
-}
-
-#bottom img {
-  max-width: 100%;
-  height: auto;
-}
-
+    margin-top: 5%;
+    margin-bottom: 6%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  #bottom h1 {
+    margin-bottom: 20px;
+  }
+  
+  #bottom img {
+    width: 30%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+  
+  
 #me {
     margin-top: 5%;
     margin-bottom: 8%;
