lets get started brushing up some stuff

--- a/src/componets/about/about.css
+++ b/src/componets/about/about.css
@@ -46,7 +46,8 @@ p {
   }
   
   #bottom h1 {
-    margin-bottom: 20px;
+    margin-bottom: 23px;
+    font-size:  2.8rem;
   }
   
   #bottom img {
