--- a/src/componets/about/about.css
+++ b/src/componets/about/about.css
@@ -36,7 +36,7 @@ p {
     margin: 3% 1.5%;
     border-radius: 33px;
 }
-#skills:hover img {
+#skills img:hover {
     transform: scale(1.1);
     transition: 0.3s;
 }
