--- a/src/componets/about/about.css
+++ b/src/componets/about/about.css
@@ -37,8 +37,9 @@ p {
     border-radius: 33px;
 }
 #skills img:hover {
-    transform: scale(1.1);
-    transition: 0.3s;
+    transform: scale(1.3);
+    transition: 0.4s;
+    border:  #303030;
 }
 
 #bottom {
