why not add this to my certificate

--- a/src/componets/about/about.css
+++ b/src/componets/about/about.css
@@ -39,7 +39,7 @@ p {
 #skills img:hover {
     transform: scale(1.3);
     transition: 0.4s;
-    border: 3px solid #be0000;
+    border: 3px solid #0033be;
 }
 
 #bottom {
@@ -57,11 +57,16 @@ p {
   }
   
   #bottom img {
-    width: 35%;
+    width: 15%;
     height: auto;
     display: block;
     margin: 0 auto;
     border-radius: 33px;
+  }
+  #bottom img:hover {
+    transform: scale(1.3);
+    transition: 0.4s;
+    border: 3px solid #0033be;
   }
   
   
