--- a/src/componets/contact/contact.css
+++ b/src/componets/contact/contact.css
@@ -11,11 +11,16 @@ body {
 #links {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin-bottom: 90px;
     
 }
 #links a {
     text-decoration: none;
     color: #C8C8C8;
+}
+#links a:hover {
+    color: #0033be;
 }
