--- a/src/componets/contact/contact.css
+++ b/src/componets/contact/contact.css
@@ -24,3 +24,13 @@ body {
 #links a:hover {
     color: #0033be;
 }
+#links img {
+    width: 10%;
+    margin: 3% 1.5%;
+    border-radius: 33px;
+    transition: 0.4s;
+}
+#links img:hover {
+    transform: scale(1.4);
+    cursor: pointer;
+}
