--- a/src/componets/contact/contact.css
+++ b/src/componets/contact/contact.css
@@ -14,7 +14,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 90px;
+    margin-bottom: 30%;
     
 }
 #links a {
@@ -25,7 +25,7 @@ body {
     color: #0033be;
 }
 #click img {
-    width: 5%;
+    width: 7%;
     margin: 3% 1.5%;
     border-radius: 33px;
     transition: 0.4s;
