--- a/src/componets/nav/nav.css
+++ b/src/componets/nav/nav.css
@@ -8,11 +8,8 @@ nav {
     justify-content: space-between;
     padding: 0 10px;
     align-items: center;
-
     background-color: #282828;
     border-bottom: 3px solid #282828;
-    
-   
     height: 6vh;
 }
 
@@ -33,11 +30,10 @@ nav {
 }
 
 #first h4 {
-    margin-top: 1px; /* Adjust the margin top as desired */
+    margin-top: 1px; 
     font-size: 13px;
     margin-bottom: 17px;
 }
-
 nav button {
     background: transparent;
     color: #C8C8C8;
