--- a/src/componets/about/about.css
+++ b/src/componets/about/about.css
@@ -24,7 +24,11 @@ body {
 p {
     font-size: 1.2rem;
 }
-
+/* .about {
+    margin-top: 5%;
+    margin-bottom: 15%;
+    margin-right: 25%;
+} */
 
 #bg {
   background-color: #282828;
