--- a/src/componets/footer/footer.css
+++ b/src/componets/footer/footer.css
@@ -4,6 +4,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     /* border-top: 2px solid #282828; */
+    background-color: #282828
 }
 #footer h2 {
     font-size: 20px;
