--- a/src/componets/about/about.css
+++ b/src/componets/about/about.css
@@ -10,8 +10,8 @@ body {
 }
 
 #about img {
-    width: 260px;
-    border: 5.5px solid #282828;
+    width: 11%;
+    border: none;
     border-radius: 200px;
     float: left;
     margin-right: 4%;
@@ -19,7 +19,7 @@ body {
     margin-left: 10%;
 }
 #about img:hover {
-    border: 5.5px solid #0033be;
+    box-shadow: #617dcc 2.5px 0px 10px;
 }
 p {
     font-size: 1.2rem;
@@ -59,6 +59,7 @@ p {
   transform: scale(1.3);
   transition: 0.5s;
   border: none;
+  box-shadow: none;
 }
 
 #bottom {
@@ -95,11 +96,15 @@ p {
     margin: 0;
     transition: 0.5s;
     border: none;
+    margin-right: 4px;
   }
   #herd img:hover {
-    margin: 0;
+   
     border: none;
-    transform: scale(1.1);
+    transform: scale(1.13);
+    box-shadow: none;
+    /* how to make it a pointer */
+    cursor: pointer;
   }
   
 #me {
@@ -115,3 +120,15 @@ p {
    margin-right: 25%;
 }
 
+/* #picOfMe {
+  width: 6%;
+  height: auto;
+  display: block;
+  margin: 0;
+  transition: 0.5s;
+  border: none;
+}
+#picOfMe:hover {
+    border: none;
+    transform: scale(1.1);
+} */
