--- a/src/componets/about/about.css
+++ b/src/componets/about/about.css
@@ -56,7 +56,7 @@ p {
 }
 
 #skills img:hover {
-  transform: scale(1.3);
+  transform: scale(1.2);
   transition: 0.5s;
   border: none;
   box-shadow: none;
@@ -85,8 +85,8 @@ p {
     transition: 0.9s;
   }
   #bottom img:hover {
-    transform: scale(1.2);
-    border: 3px solid #0033be;
+    transform: scale(1.1);
+    box-shadow: #617dcc 6px 6px 9px;
   }
   
   #herd img {
