--- a/src/componets/footer/footer.css
+++ b/src/componets/footer/footer.css
@@ -18,3 +18,8 @@ a {
     color: #C8C8C8;
     text-decoration: none;
 }
+.foot {
+    font-size: 20px;
+    color: #C8C8C8;
+    margin-left: 0;
+}
