--- a/src/componets/work/work.css
+++ b/src/componets/work/work.css
@@ -37,19 +37,27 @@ body {
     height: 100%;
     border: 4px solid #000;
     border-radius: 8px;
-    box-shadow: 9px -1px 20px 2px #000;
+    /* box-shadow: 9px -1px 20px 2px #000; */
     filter: blur(1.3px);
     transition: filter 0.4s ease-in-out;
+    transition: 0.8s;
 }
+
+.recents {
+    color: #282828;
+}
+
 
 .card:first-child > img {
     filter: blur(0px);
 }
 .card img:hover {
     opacity: 10;
-    box-shadow: #617dcc 3px 3px 13px;
+    /* box-shadow: #617dcc 3px 3px 13px; */
+    box-shadow: 8px -1px 20px 2px #000;
     filter: blur(0px);
     cursor: pointer;
+    transition: 0.7s;
 }
 
 .card div {
