--- a/src/componets/about/about.css
+++ b/src/componets/about/about.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(45deg, #d2001a, #7462ff, #f48e21, #23d5ab );
+  background: linear-gradient(135deg, #43cea2 , #185a9d, #ffafbd,#185a9d);
     color: #C8C8C8;
     background-size: 300% 300%;
     /* background-image: url(./images/Untitled\ design.png); */
